--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.3.3"
+    "mysql2": "^2.1.0"
   }
 }
